--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
+    "scrollmagic": "^2.0.8",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.5"
   },
