--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@firebase/auth": "^1.1.0",
     "@types/styled-components": "^5.1.26",
     "firebase": "^10.1.0",
+    "gsap": "^3.12.2",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
