--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@firebase/auth": "^1.1.0",
     "@types/styled-components": "^5.1.26",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.1.0",
     "gsap": "^3.12.2",
     "next": "13.4.12",
