--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@firebase/auth": "^1.1.0",
     "@types/styled-components": "^5.1.26",
+    "browser-image-compression": "^2.0.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
     "gsap": "^3.12.2",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "scrollmagic": "^2.0.8",
     "slick-carousel": "^1.8.1",
@@ -26,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.18",
+    "@types/react-modal": "^3.16.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "typescript": "^5.1.6"
