--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "gsap": "^3.12.2",
-    "next": "13.4.12",
+    "next": "^13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -24,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "scrollmagic": "^2.0.8",
+    "sharp": "^0.32.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.5"
   },
